# llm-ol

./: .gitignore  README.md  environment.yml  justfile  metadata.py  pyproject.toml  requirements.txt
hub/: upload_dataset.py  upload_eval.py  upload_experiments.py
llm_ol/: prompts.md
llm_ol/dataset/: data_model.py  post_process.py  train_test_split.py
llm_ol/eval/: compare_graphs.py  eval_single_graph.py  graph_metrics.py  hp_search.py  test_metrics.py
llm_ol/experiments/: post_processing.py
llm_ol/llm/: cpu.py  embed.py
llm_ol/utils/: __init__.py  logging.py  nx_to_gt.py  parallel_async_openai.py  plotting.py  regex_sampler.py  textqdm.py  torch_utils.py  wandb.py
llm_ol/visualisation/: graph.py
notebooks/: all_graphs.ipynb  clustering_toy_method.ipynb  compare_metrics.ipynb  concept_tagger.ipynb  diss_graphs.ipynb  edge_matching.ipynb  embedding_synonyms.ipynb  evaluation.ipynb  explore_arxiv_data.ipynb  explore_graph.ipynb  explore_hearst.ipynb  explore_train_test_split.ipynb  explore_wiki_data.ipynb  finetuning.ipynb  hp_search.ipynb  inference.ipynb  inspect_node_by_dist.ipynb  keyword_toy_method.ipynb  link_prediction.ipynb  llm_explore.ipynb  motifs.ipynb  prune.ipynb  rebel.ipynb  test_openai.ipynb  test_tokenizers.ipynb  tokenization.ipynb  toy_graphs.ipynb  visualise_loss.ipynb  wordnet.ipynb
report/: acronyms.tex  figures  media  metadata.tex  proposal.tex  references.bib  refs.bib  report.tex
report/paper/: appendix.tex  checklist.tex  neurips_2024.tex  references.bib
report/sections/: appendix.tex  background.tex  conclusion.tex  evaluation.tex  implementation.tex  introduction.tex  proforma.tex
runs/: build_arxiv_categories.sh  build_arxiv_pages.sh  build_wiki_categories.sh  build_wiki_pages.sh  export_arxiv_graph.sh  export_hearst_graph.sh  export_wiki_graph.sh  interactive_cpu.sh  interactive_cpu_medium.sh  launch.sh  launch_gpu.sh  run_hearst.sh  run_prompting.sh
runs/eval/: test_metrics.sh
runs/finetune/: build_dataset.sh  debug.sh  debug_weighted.sh  eval.sh  export.sh  export_all.sh  inference.sh  main.sh  main_arxiv.sh  main_small_ds.sh  main_weighted.sh
runs/hearst/: eval.sh  eval_svd.sh  export.sh  export_svd.sh  main.sh
runs/link_prediction/: eval.sh  inference.sh  main.sh
runs/llm/: build_dataset.sh
runs/llms4ol/: export_concepts.sh  predict_concepts.sh  predict_links.sh
runs/memorisation/: eval.sh  main.sh
runs/prompting/: eval.sh  eval_v2.sh  export.sh  export_v2.sh  main.sh  main_cot.sh
runs/rebel/: eval.sh  eval_svd.sh  export.sh  export_svd.sh  main.sh
(+94 files in other folders)
